--- a/css/custom/includes/_banner.scss
+++ b/css/custom/includes/_banner.scss
@@ -1,6 +1,7 @@
 #banner{
   position: relative;
-  background: url("../../img/banner.jpg");
+  background: url("{{ "../../img/banner.jpg" | relative_url }}");
+  
   min-height: 250px;
 
   .primary-overlay{
