--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="py-5">
+<footer class="py-1">
   <hr>
   <div class="container text-center text-info">
     <div class="row">
@@ -10,12 +10,12 @@
     </div>
     <div class="row">
       <div class="col">
-        All content copyright Saurabh Kumar &copy; {{ site.time | date: '%Y' }}.
+        Designed and maintained by 
       </div>
     </div>
     <div class="row">
       <div class="col">
-        All rights reserved.
+        <a href="{{ site.baseurl }}/about/">Saurabh Kumar</a> 
       </div>
     </div>
   </div>
