--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -3,8 +3,9 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center">
-          <h1 class="display-3 pt-4">
-            Jekyll with Bootstrap
+          <h1 class="display-4 pt-4">
+            
+            Let's create something useful together.
           </h1>
       </div>
       <div class="col-md-6"></div>
