--- a/_includes/post.html
+++ b/_includes/post.html
@@ -2,12 +2,36 @@
   <div class="row">
     <div class="col">
       <p class="lead text-info">
-        {{ page.date | date: "%b %-d, %Y" }}
+        {{ page.date | date: "%b %-d, %Y" }}</br>
+        <a href="{{ site.baseurl }}/about/">{{ site.author }}</a> 
       </p>
       <h1>{{ page.title }}</h1>
       <article>
         {{ content }}
       </article>
+    
+
+    </div>
+  </div>
+<hr>
+
+  <div class="row">
+    <div class="col">
+      <p class="lead text-info">
+              </p>
+      <h4>Read more articles</h4>
+      <hr>
+
+      <ul>
+          {% for post in site.posts %}
+          {% if {{page.title}} != {{ post.title }} %}
+            <li>
+              <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+            </li>
+            {% endif %}
+          {% endfor %}
+        </ul>
+
     </div>
   </div>
 </div>
