--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
   {% include head.html %}
   <body>
     {% include header.html %}
+    
     {% include banner.html %}
+    {% include alert.html %}
+
     {{ content }}
     {% include footer.html %}
   </body>
