--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,10 @@
   {% include head.html %}
   <body>
     {% include header.html %}
+
     {% include banner.html %}
+    {% include alert.html %}
+
     {% include post.html %}
     {% include footer.html %}
   </body>
