--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,6 @@
 
   <title>{{ site.title }} | {{ page.title }}  </title>
 
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="{{ "/css/main.css" | relative_url }}">
 </head>
 
