--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,8 @@
           <a href="{{ site.baseurl }}/about/" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="{{ "/assets/Resume.pdf" | relative_url }}" class="nav-link">Resume</a>
+          <a href="{{ site.url }}/assets/Resume.pdf" class="nav-link">
+          Resume</a>
         </li>
 
       </ul>
