--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
           <a href="{{ site.baseurl }}/about/" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="{{ site.baseurl }}/assets/Resume.pdf" class="nav-link">
+          <a href="{{ "/assets/resume.pdf" | relative_url }}" class="nav-link">
           Resume</a>
         </li>
 
