--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,10 @@
           Resume</a>
         </li>
 
+        <li class="nav-item">
+          <a href="https://blog.saurabhku.com" class="nav-link">My Travel Blog</a>
+        </li>
+
       </ul>
     </div>
   </div>
